# gokan

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  index.html  params.json
gokand/: Makefile.am  configuration.cpp  configuration.h  controller.cpp  controller.h  dbusservice.cpp  dbusservice.h  finder.cpp  finder.h  main.cpp  sensor.cpp  sensor.h  sensorimpl.cpp  sensorimpl.h  sensorimpliio.cpp  sensorimpliio.h
libgokan/: Makefile.am  com.canonical.Gokan.xml  device.cpp  device.h  deviceimpl.cpp  deviceimpl.h  libgokan_config.h
test/: Makefile.am  gtest_gokand_create_sensor.cpp
tools/: Makefile.am  gokan-ls.cpp
